--- a/Players/allplayers.html
+++ b/Players/allplayers.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SE Data Analysis</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Games 1</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
@@ -38,7 +38,7 @@
               </div>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Players
                 </a>
@@ -58,7 +58,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>SE stuff</h1>
+        <h1>Players</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
@@ -69,30 +69,43 @@
             <h3 class="panel-title">Filters</h3>
           </div>
           <div id="sample-metadata" class="panel-body">
-            <h5>Format:</h5>
-            <select id="selDataset" onchange="optionChanged(this.value)">
-                <option>LGs & AGs</option>
-                <option>MR</option>
-                <option>QF</option>
-                <option>AGs</option>
+
+            <h5>Joining Year:</h5>
+            <select id="selYear" onchange="filterYear(this.value)">
+
             </select>
+
+            <h5>Minimum # of games:</h5>
+            <select id="selMinimum" onchange="minNum(this.value)">
+                <option>5</option>
+                <option>10</option>
+            </select>
+
+            <h5>other filters here</h5>
           </div>
 
 
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
+        <div id="alignment-pie"></div>
       </div>
       <div class="col-md-5">
-        <div id="gauge"></div>
+        <div id="survival-pie"></div>
       </div>
     </div>
+
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble"></div>
+        <div id="join-game-bar"></div>
       </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+          <div id="player-table"></div>
+        </div>
+      </div>
   </div>
 
 
@@ -100,8 +113,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="static/js/app.js"></script>
+  <script src="../static/js/players.js"></script>
   
 </body>
 
