--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   Players
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                  <a class="dropdown-item" href="#">All Players</a>
+                  <a class="dropdown-item" href="Players/allplayers.html">All Players</a>
                   <a class="dropdown-item" href="#">Specific Players</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">GMs</a>
