add more gamedata to json and fix

--- a/Games/allgames.html
+++ b/Games/allgames.html
@@ -91,17 +91,15 @@
 
         </div>
       </div>
-      <div class="col-md-5">
-        <div id="unknown"></div>
+      <div class="col-md-10">
+        <div id="bar-num-survive"></div>
       </div>
-      <div class="col-md-5">
-        <div id="unknown"></div>
-      </div>
+ 
 
     </div>
     <div class="row">
-      <div class="col-md-12">
-        <div id="bar-num-players"></div>
+      <div class="col-md-6">
+        <div id="outcomes-length"></div>
       </div>
     </div>
   </div>
