outcome graphs on games page

--- a/Games/allgames.html
+++ b/Games/allgames.html
@@ -101,6 +101,9 @@
       <div class="col-md-6">
         <div id="outcomes-length"></div>
       </div>
+      <div class="col-md-6">
+          <div id='outcome-pie'></div>
+      </div>
     </div>
   </div>
 
