--- a/Games/allgames.html
+++ b/Games/allgames.html
@@ -57,6 +57,17 @@
 <!-- note: change dropdowns to bootstrap dropdowns -->
   <div class="container">
     <div class="row">
+      <div class="col-12">
+        <div class="jumbotron text-center">
+          <h1>SE Game Stats</h1>
+          <!-- currently viewing stat -->
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="row">
 
       <div class="form-group col">
         <label for="exampleFormControlSelect1">Format</label>
