tweak page formatting, add color to dot plot

--- a/Players/allplayers.html
+++ b/Players/allplayers.html
@@ -33,7 +33,7 @@
                 Games
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="./Games/allgames.html">All Games</a>
+                <a class="dropdown-item" href="../Games/allgames.html">All Games</a>
                 <a class="dropdown-item" href="#">Specific Games</a>
               </div>
             </li>
