--- a/Games/allgames.html
+++ b/Games/allgames.html
@@ -15,16 +15,14 @@
 
     <!-- NAVBAR HERE -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+        <a class="navbar-brand" href="#">SE Data Analysis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Games 1</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="#">About</span></a>
             </li>
@@ -55,10 +53,10 @@
 
 
 <!-- note: change dropdowns to bootstrap dropdowns -->
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <div class="jumbotron text-center">
+        <div class="jumbotron text-center" id="games-header">
           <h1>SE Game Stats</h1>
           <!-- currently viewing stat -->
         </div>
