--- a/index.html
+++ b/index.html
@@ -14,26 +14,24 @@
 
     <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <a class="navbar-brand" href="index.html">SE Data Analysis</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+
         <li class="nav-item">
-          <a class="nav-link" href="#">Games 1</a>
+          <a class="nav-link" href="index.html">About</span></a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Games
+            Games <span class="sr-only">(current)
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="Games/allgames.html">All Games</a>
-            <a class="dropdown-item" href="#">Specific Games</a>
+            <a class="dropdown-item" href="Games/specific_games.html">Specific Games</a>
           </div>
         </li>
 
@@ -43,9 +41,9 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
               <a class="dropdown-item" href="Players/allplayers.html">All Players</a>
-              <a class="dropdown-item" href="#">Specific Players</a>
+              <a class="dropdown-item" href="Players/specific_players.html">Specific Players</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">GMs</a>
+              <a class="dropdown-item" href="Players/gms.html">GMs</a>
             </div>
           </li>
       </ul>
@@ -53,43 +51,10 @@
   </nav>
 
 
-
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>SE stuff</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Filters</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body">
-            <h5>Format:</h5>
-            <select id="selDataset" onchange="optionChanged(this.value)">
-                <option>LGs & AGs</option>
-                <option>MR</option>
-                <option>QF</option>
-                <option>AGs</option>
-            </select>
-          </div>
-
-
-        </div>
-      </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
+      <div class="col jumbotron">
+        <h1>WORK IN PROGRESS</h1>
       </div>
     </div>
   </div>
