--- a/Games/allgames.html
+++ b/Games/allgames.html
@@ -15,7 +15,7 @@
 
   <!-- NAVBAR HERE -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="index.html">SE Data Analysis</a>
+    <a class="navbar-brand" href="../index.html">SE Data Analysis</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,15 +24,15 @@
       <ul class="navbar-nav mr-auto">
 
         <li class="nav-item">
-          <a class="nav-link" href="index.html">About</span></a>
+          <a class="nav-link" href="../index.html">About</span></a>
         </li>
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Games <span class="sr-only">(current)
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Games/allgames.html">All Games</a>
-            <a class="dropdown-item" href="Games/specific_games.html">Specific Games</a>
+            <a class="dropdown-item" href="allgames.html">All Games</a>
+            <a class="dropdown-item" href="specific_games.html">Specific Games</a>
           </div>
         </li>
 
@@ -41,10 +41,10 @@
               Players
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-              <a class="dropdown-item" href="Players/allplayers.html">All Players</a>
-              <a class="dropdown-item" href="Players/specific_players.html">Specific Players</a>
+              <a class="dropdown-item" href="../Players/allplayers.html">All Players</a>
+              <a class="dropdown-item" href="../Players/specific_players.html">Specific Players</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="Players/gms.html">GMs</a>
+              <a class="dropdown-item" href="../Players/gms.html">GMs</a>
             </div>
           </li>
       </ul>
