--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 
     <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="index.html">SE Data Analysis</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
+    <a class="navbar-brand" href="#">SE Data Analysis</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,12 +22,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
 
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</span></a>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About</span></a>
         </li>
-        <li class="nav-item dropdown active">
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Games <span class="sr-only">(current)
+            Games <span class="sr-only">
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="Games/allgames.html">All Games</a>
@@ -54,7 +54,7 @@
   <div class="container">
     <div class="row">
       <div class="col jumbotron">
-        <h1>WORK IN PROGRESS</h1>
+        <h1 style='text-align: center;'>WORK IN PROGRESS</h1>
       </div>
     </div>
   </div>
@@ -65,7 +65,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="static/js/app.js"></script>
+
   
 </body>
 
