make todo file, redo readme file

--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
       </div>
     </div>
 
+
+<!-- something about the site and how to use it -->
+
+
+
+
     <div class="row">
       <div class='col'>
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">About Me</a>
+            <a class="nav-item nav-link active text-warning" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">About Me</a>
             <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">About SE</a>
             <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Links & Such</a>
           </div>
