format to do, add preliminary text to about page

--- a/index.html
+++ b/index.html
@@ -74,9 +74,27 @@
           </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
-          <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">Hey! I'm Isabelle, or Elbereth, depending on where you know me from.</div>
-          <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">Sanderson Elimination is a community of... </div>
-          <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">Github: <br>Stats sheet: <br> Contact me: <br></div>
+          <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+            Hey! I'm Isabelle, or Elbereth, depending on where you know me from. If you're here because I gave you this link to show you a cool thing, click the 'About SE' tab so you have some idea of what's going on. <br>
+            In Sanderson Elimination, I'm a subforum moderator and have been playing there for over 5 years now. I currently have the distinction of having GMed the most games of anyone, and you can still catch me doing that on occasion! 
+
+            <br> <br> 
+
+            In the real world, my name is Isabelle Sanford, and I'm a junior at Bryn Mawr College. I'm majoring in Computer Science and Math, with a minor in Physics, and on the side I do data analysis - like this site! 
+
+            <br> <br>
+
+            Yes, this about page isn't finished yet. I've been too busy applying for internships. (So hire me, and I can go back to doing fun stuff like this!)
+          </div>
+          <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+            Sanderson Elimination is a community of... 
+          </div>
+
+          <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+            Github repository for this project: <br>
+            Stats sheet: <br> 
+            Contact me: <br>
+          </div>
         </div>
       </div>
     </div>
