sketch out specific game page

--- a/Games/specific_games.html
+++ b/Games/specific_games.html
@@ -50,12 +50,78 @@
     </nav>
 
     <div class="container">
-    <div class="row">
-        <div class="col jumbotron">
-        <h1>WORK IN PROGRESS</h1>
+        <div class="row">
+            <div class='col-4 align-items-end'> 
+                <!-- Button to go back to 'pick games' page -->
+            </div>
+        </div>
+        
+        <div class='row'>
+            <div class="col jumbotron">
+                <h1>WORK IN PROGRESS</h1>
+                <h1 id="game-name"></h1>
+                <h3 id='game-title'></h3>
+            </div>
+
+            <div class='col-2'>
+                <!-- Table of various stats -->
+
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">Summary</h3>
+                    </div>
+                    <div id="summ-stats" class="panel-body">
+                        <!-- Setting, IM, # players, length, winner -->
+
+
+                    </div>
+                  </div>
+
+
+            </div>
+
+            <div class='col-10'>
+
+                <div class='row'>
+
+                    <div class='col-6'>
+                        <!-- GM -->
+                        <h2 id='gm-name'>GM: </h2>
+                    </div>
+
+                    <div class='col-6'>
+                        <!-- Link to SE game page (button) -->
+                    </div>
+
+
+                    <div class='col-12'>
+                        <!-- Writeup - sep if broken? Graphs? Stuff here -->
+                    </div>
+
+
+
+                    <div class='col-12'>
+                        <h2>Players</h2>
+                        <br>
+
+                        <!-- buttons with players on them -->
+
+                    </div>
+
+
+                </div>
+
+
+
+
+
+            </div>
+
+
         </div>
     </div>
-    </div>
+
+
     
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
