update about page with links

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           </div>
 
           <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-            Github repository for this project: <br>
-            Stats sheet: <br> 
-            Contact me: <br>
+            <a href=https://github.com/isabelle-sanford/se-data-analysis>Github repository for this project</a><br>
+            <a href=https://docs.google.com/spreadsheets/d/1CxrgdT4Xd8J0N3CuVmkVRryMeIdm93H8rzv8-YlP0kw>Stats sheet</a><br><br> 
+            Contact me: <a href=isabellesanford@gmail.com>isabellesanford@gmail.com</a>  <br>
           </div>
         </div>
       </div>
